Handle nginx through ansible.

--- a/roles/set_custom_fact/tasks/main.yml
+++ b/roles/set_custom_fact/tasks/main.yml
@@ -12,3 +12,7 @@
   template:
     src: ideascube.vhost.j2
     dest: /etc/nginx/sites-enabled/ideascube
+
+- name: start nginx
+  service: nginx
+  state: started
