Taking hosts management back in ansible, all in one place rule. Using lineinfile fails, but a 'cat' do work...

--- a/roles/set_custom_fact/tasks/main.yml
+++ b/roles/set_custom_fact/tasks/main.yml
@@ -8,6 +8,15 @@
 - name: reload ansible_local
   setup: filter=ansible_local
 
+- name: Copy hosts entries
+  copy:
+    src: hosts
+    dest: /tmp/hosts
+    mode: 0644
+
+- name: Spoof DNS entries
+  shell: cat /tmp/hosts >> /etc/hosts
+
 - name: set nginx vhost
   template:
     src: ideascube.vhost.j2
