--- a/roles/set_custom_fact/tasks/main.yml
+++ b/roles/set_custom_fact/tasks/main.yml
@@ -22,6 +22,12 @@
     src: ideascube.vhost.j2
     dest: /etc/nginx/sites-enabled/ideascube
 
+- name: set long domain name in nginx
+  lineinfile:
+    path: /etc/nginx/nginx.conf
+    regexp: "# server_names_hash_bucket_size"
+    line: server_names_hash_bucket_size 128;
+
 - name: start nginx
   service: 
     name: nginx
