--- a/roles/package_management/tasks/main.yml
+++ b/roles/package_management/tasks/main.yml
@@ -48,11 +48,11 @@
 
 - name: Try to link kiwix packages without installing.
   block:
-    - shell: kiwix-manage /var/ideascube/kiwix/library.xml add /var/ideascube/kiwix/data/content/{{ item.name }}.zim
+    - shell: kiwix-manage /var/ideascube/kiwix/library.xml add /var/ideascube/kiwix/data/content/{{ item }}.zim
       with_items: "{{ device_kiwix_pkg }}"
     - include_vars: file=/var/ideascube/main/catalog/installed.json name="installed_json"
     - set_fact:
-        installed_json: "{{ installed_json | combine({ item.name: Kiwix['all'][item.name] }) }}"
+        installed_json: "{{ installed_json | combine({ item: Kiwix['all'][item] }) }}"
       with_items: "{{ device_kiwix_pkg }}"
     - copy: content="{{ installed_json | to_nice_json }}"  dest=/var/ideascube/main/catalog/installed.json
     - script: update_sqlite.py "{{ device_kiwix_pkg }}"
