--- a/roles/package_management/tasks/main.yml
+++ b/roles/package_management/tasks/main.yml
@@ -51,6 +51,7 @@
     - shell: kiwix-manage /var/ideascube/kiwix/library.xml add /var/ideascube/kiwix/data/content/{{ item }}.zim
       with_items: "{{ device_kiwix_pkg }}"
       notify: Start kiwix serve
+      ignore_errors: True
     - include_vars: file=/var/ideascube/main/catalog/installed.json name="installed_json"
     - set_fact:
         installed_json: "{{ installed_json | combine({ item: Kiwix['all'][item] }) }}"
@@ -58,4 +59,4 @@
     - copy: content="{{ installed_json | to_nice_json }}"  dest=/var/ideascube/main/catalog/installed.json
     - script: update_sqlite.py "{{ device_kiwix_pkg |join(' ')}}"
   rescue:
-    - debug: msg="Failed to install all kiwix packages, probably one is missing from cache server."
+    - debug: msg="Failed updating Ideascube after kiwix packages installations, error could be with installed.json or default.sqlite."
