--- a/main.yml
+++ b/main.yml
@@ -3,7 +3,7 @@
   roles:
     - set_custom_fact
     - package_management
-    - role: kolibri
-      when: ansible_local.device_list[generic_project_name].kolibri is defined
-        and ansible_local.device_list[generic_project_name].kolibri.activated|bool == True
+#    - role: kolibri
+#      when: ansible_local.device_list[generic_project_name].kolibri is defined
+#        and ansible_local.device_list[generic_project_name].kolibri.activated|bool == True
 
