--- a/roles/package_management/tasks/main.yml
+++ b/roles/package_management/tasks/main.yml
@@ -48,7 +48,20 @@
 
 - name: Try to link kiwix packages without installing.
   block:
-    - shell: kiwix-manage /var/ideascube/kiwix/library.xml add /var/ideascube/kiwix/data/content/{{ item }}.zim
+    - file: path=/var/ideascube/kiwix/data/{{ item }} state=directory mode=0755
+      with_items:
+        - "content"
+        - "library"
+        - "index"
+    - shell: |
+        for pkg in $(ls /mnt/kiwix/content/{{ item }}*)
+          do
+            f=$(basename $pkg)
+            ln -s $pkg /var/ideascube/kiwix/data/content/$f
+          done
+        ln -s /mnt/kiwix/index/{{ item }}.idx /var/ideascube/kiwix/data/index/{{ item }}.idx
+        ln -s /mnt/kiwix/library/{{ item }}.xml /var/ideascube/kiwix/data/library/{{ item }}.xml
+        kiwix-manage /var/ideascube/kiwix/library.xml add /var/ideascube/kiwix/data/content/{{ item }}.zim
       with_items: "{{ device_kiwix_pkg }}"
       notify: Start kiwix serve
       ignore_errors: True
