Adding DEV env vars.

--- a/roles/package_management/defaults/main.yml
+++ b/roles/package_management/defaults/main.yml
@@ -1,14 +1,28 @@
 ---
 catalogs:
-  - id: "Kiwix"
-    name: "Kiwix ZIM content"
-    url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/kiwix.yml"
-  - id: "Omeka"
-    name: "Omeka packages"
-    url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/omeka.yml"
-  - id: "StaticSites"
-    name: "Static sites"
-    url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/static-sites.yml"
-  - id: "osmaps"
-    name: "OpenStreetMaps"
-    url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/osmaps.yml"
+  PROD:
+    - id: "Kiwix"
+      name: "Kiwix ZIM content"
+      url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/kiwix.yml"
+    - id: "Omeka"
+      name: "Omeka packages"
+      url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/omeka.yml"
+    - id: "StaticSites"
+      name: "Static sites"
+      url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/static-sites.yml"
+    - id: "osmaps"
+      name: "OpenStreetMaps"
+      url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/osmaps.yml"
+  DEV:
+    - id: "Kiwix"
+      name: "Kiwix ZIM content"
+      url: "https://raw.githubusercontent.com/bot-TempsModernes/catalog-i-o/master/kiwix.yml"
+    - id: "Omeka"
+      name: "Omeka packages"
+      url: "https://raw.githubusercontent.com/bot-TempsModernes/catalog-i-o/master/omeka.yml"
+    - id: "StaticSites"
+      name: "Static sites"
+      url: "https://raw.githubusercontent.com/bot-TempsModernes/catalog-i-o/master/static-sites.yml"
+    - id: "osmaps"
+      name: "OpenStreetMaps"
+      url: "https://raw.githubusercontent.com/bot-TempsModernes/catalog-i-o/master/osmaps.yml"
