Add a deployable option to spoof Ideascube. Not implemented yet.

--- a/roles/package_management/defaults/main.yml
+++ b/roles/package_management/defaults/main.yml
@@ -26,3 +26,5 @@ catalogs:
     - id: "osmaps"
       name: "OpenStreetMaps"
       url: "https://raw.githubusercontent.com/bot-TempsModernes/catalog-i-o/master/osmaps.yml"
+
+deployable: True
