--- a/roles/package_management/tasks/main.yml
+++ b/roles/package_management/tasks/main.yml
@@ -19,10 +19,13 @@
     name: "{{ item.id }}"
   with_items: "{{ catalogs[env] }}"
 
-- name: install non-Kiwix packages
-  shell: ideascube catalog install {{ item.name }}
-  when: "{{ item.name not in Kiwix.all }}"
-  with_items: '{{ ansible_local.device_list[generic_project_name].package_management | default(omit) }}'
+- name: install non-Kiwix packages -- Deployable
+  include: deployable.yml
+  when: deployable
+
+- name: install non-Kiwix packages -- non-Deployable
+  include: non-deployable.yml
+  when: not deployable
 
 - name: Download Kiwix binary
   get_url:
