Using catalog from our server instead of github, which can be slow sometimes.

--- a/roles/package_management/defaults/main.yml
+++ b/roles/package_management/defaults/main.yml
@@ -3,16 +3,16 @@ catalogs:
   PROD:
     - id: "Kiwix"
       name: "Kiwix ZIM content"
-      url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/kiwix.yml"
+      url: "http://catalog.ideascube.org/kiwix.yml"
     - id: "Omeka"
       name: "Omeka packages"
-      url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/omeka.yml"
+      url: "http://catalog.ideascube.org/omeka.yml"
     - id: "StaticSites"
       name: "Static sites"
-      url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/static-sites.yml"
+      url: "http://catalog.ideascube.org/static-sites.yml"
     - id: "osmaps"
       name: "OpenStreetMaps"
-      url: "https://raw.githubusercontent.com/ideascube/catalog-i-o/master/osmaps.yml"
+      url: "http://catalog.ideascube.org/osmaps.yml"
   DEV:
     - id: "Kiwix"
       name: "Kiwix ZIM content"
