--- a/roles/package_management/tasks/main.yml
+++ b/roles/package_management/tasks/main.yml
@@ -30,17 +30,13 @@
     dest: /usr/local/bin/kiwix-manage
     mode: 0755
 
-- name: Gather all Kiwix package names
-  set_fact:
-    kiwix_pkg_list: "{{ Kiwix.all.keys() }}"
-
 - name: Gather all package names for device
   set_fact:
     device_pkg_list: "{{ ansible_local.device_list[generic_project_name].package_management | map(attribute='name') |list }}"
 
 - name: Extract list of Kiwix packages to install.
   set_fact:
-    device_kiwix_pkg: "{{ kiwix_pkg_list | intersect(device_pkg_list) }}"
+    device_kiwix_pkg: "{{ Kiwix.all.keys() | intersect(device_pkg_list) }}"
 
 - name: Try to link kiwix packages without installing.
   block:
@@ -50,14 +46,8 @@
         - "library"
         - "index"
     - shell: |
-        for pkg in $(ls /mnt/kiwix/content/{{ item }}*)
-          do
-            f=$(basename $pkg)
-            ln -s $pkg /var/ideascube/kiwix/data/content/$f
-          done
-        ln -s /mnt/kiwix/index/{{ item }}.zim.idx /var/ideascube/kiwix/data/index/{{ item }}.zim.idx
-        ln -s /mnt/kiwix/library/{{ item }}.zim.xml /var/ideascube/kiwix/data/library/{{ item }}.zim.xml
-        kiwix-manage /var/ideascube/kiwix/library.xml add /var/ideascube/kiwix/data/content/{{ item }}.zim
+        ln -s /mnt/kiwix{{ Kiwix.all[item]['url'].split("download.kiwix.org")[-1] }} /var/ideascube/kiwix/{{ item }}.zim
+        kiwix-manage /var/ideascube/kiwix/library.xml add /var/ideascube/kiwix/{{ item }}.zim
       with_items: "{{ device_kiwix_pkg }}"
       notify: Start kiwix serve
       ignore_errors: True
