Adding QAS environment.

--- a/roles/package_management/defaults/main.yml
+++ b/roles/package_management/defaults/main.yml
@@ -26,3 +26,16 @@ catalogs:
     - id: "osmaps"
       name: "OpenStreetMaps"
       url: "https://raw.githubusercontent.com/bot-TempsModernes/catalog-i-o/master/osmaps.yml"
+  QAS:
+    - id: "Kiwix"
+      name: "Kiwix ZIM content"
+      url: "http://catalog.ideascube.org/kiwix.yml"
+    - id: "Omeka"
+      name: "Omeka packages"
+      url: "http://catalog.ideascube.org/omeka.yml"
+    - id: "StaticSites"
+      name: "Static sites"
+      url: "http://catalog.ideascube.org/static-sites.yml"
+    - id: "osmaps"
+      name: "OpenStreetMaps"
+      url: "http://catalog.ideascube.org/osmaps.yml"
