Oops, using DEV values, as PROD values aren't up to date at this point.

--- a/roles/package_management/defaults/main.yml
+++ b/roles/package_management/defaults/main.yml
@@ -29,13 +29,13 @@ catalogs:
   QAS:
     - id: "Kiwix"
       name: "Kiwix ZIM content"
-      url: "http://catalog.ideascube.org/kiwix.yml"
+      url: "https://raw.githubusercontent.com/bot-TempsModernes/catalog-i-o/master/kiwix.yml"
     - id: "Omeka"
       name: "Omeka packages"
-      url: "http://catalog.ideascube.org/omeka.yml"
+      url: "https://raw.githubusercontent.com/bot-TempsModernes/catalog-i-o/master/omeka.yml"
     - id: "StaticSites"
       name: "Static sites"
-      url: "http://catalog.ideascube.org/static-sites.yml"
+      url: "https://raw.githubusercontent.com/bot-TempsModernes/catalog-i-o/master/static-sites.yml"
     - id: "osmaps"
       name: "OpenStreetMaps"
-      url: "http://catalog.ideascube.org/osmaps.yml"
+      url: "https://raw.githubusercontent.com/bot-TempsModernes/catalog-i-o/master/osmaps.yml"
