--- a/roles/package_management/tasks/non-deployable.yml
+++ b/roles/package_management/tasks/non-deployable.yml
@@ -5,8 +5,19 @@
     body_format: json
     register: omeka
 
-- name: print file path
-  debug:
-    msg: {{ item.path }}
-  with_items: {{ omeka.json.content.items }}
+- name: Create media folders
+  file:
+    dest: "/var/ideascube/mediacenter/{{ item.slug }}/files/original"
+    state: directory
+    mode: '0755'
+  with_items:
+    - "{{ omeka.json.content }}"
 
+- name: create symlinks
+  file:
+    src: "/mnt/alexandrie/{{ item.1['path']}}"
+    dest: "/var/ideascube/mediacenterpkgs/{{ item.0.slug }}/{{ item.1.path}}"
+    state: link
+  with_subelements:
+    - "{{ omeka.json.content }}"
+    - items
