Missing some definitions.

--- a/roles/package_management/tasks/non-deployable.yml
+++ b/roles/package_management/tasks/non-deployable.yml
@@ -28,9 +28,10 @@
 
 - name: Install python dependencies
   pip:
-    - SQLAlchemy==1.3.8
-    - Unidecode==1.1.1
-    - requests==2.22.0
+    name:
+      - SQLAlchemy==1.3.8
+      - Unidecode==1.1.1
+      - requests==2.22.0
   executable: pip3
 
 - name: Update default.sqlite
