--- a/roles/package_management/defaults/main.yml
+++ b/roles/package_management/defaults/main.yml
@@ -42,5 +42,6 @@ catalogs:
 
 API:
   PROD: "https://tmfront.bsf-intranet.org/goto/temps-modernes/api/project/"
-  QAS: "http://localhost:5000/temps-modernes/api/project/"
+  QAS: "http://restapi:5000/temps-modernes/api/project/"
   DEV: "http://localhost:5000/temps-modernes/api/project/"
+
