--- a/roles/package_management/tasks/non-deployable.yml
+++ b/roles/package_management/tasks/non-deployable.yml
@@ -28,6 +28,7 @@
       - SQLAlchemy==1.3.8
       - Unidecode==1.1.1
       - requests==2.21.0
+      - PyYAML==5.1.2
     executable: pip3
 
 - name: Update default.sqlite
