fix: regexp will insert at EOF if not found. We don't want this.

--- a/roles/set_custom_fact/tasks/main.yml
+++ b/roles/set_custom_fact/tasks/main.yml
@@ -35,7 +35,7 @@
 - name: set long domain name in nginx
   lineinfile:
     path: /etc/nginx/nginx.conf
-    regexp: "# server_names_hash_bucket_size"
+    insertbefore: "# server_names_hash_bucket_size"
     line: server_names_hash_bucket_size 256;
 
 - name: start nginx
